PascalParser.py
# Generated from antlr/Pascal.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class PascalParser ( Parser ):

    grammarFileName = "Pascal.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program '", "'begin'", "'end.'", "'var '", 
                     "':'", "'procedure '", "'('", "')'", "'end'", "'if'", 
                     "'then'", "'else'", "'for'", "'to'", "'do'", "'while'", 
                     "':='", "','", "'not'", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "MUL_OP", "ADD_OP", "REL_OP", "STD_TYPE_NAME", 
                      "INTEGER", "CHAR", "BOOL", "STRING", "ID", "DIGIT", 
                      "LETTER", "WS", "COMMENT_1", "COMMENT_2", "COMMENT_3" ]

    RULE_r = 0
    RULE_program = 1
    RULE_decl = 2
    RULE_vars_decl = 3
    RULE_var_decl = 4
    RULE_procedure_decl = 5
    RULE_args_decl = 6
    RULE_arg_decl = 7
    RULE_body = 8
    RULE_simple_body = 9
    RULE_b_if = 10
    RULE_b_for = 11
    RULE_b_while = 12
    RULE_assign = 13
    RULE_call = 14
    RULE_args_list = 15
    RULE_args = 16
    RULE_arg = 17
    RULE_expression = 18
    RULE_simple_expression = 19
    RULE_term = 20
    RULE_not_el = 21
    RULE_el = 22
    RULE_mb = 23

    ruleNames =  [ "r", "program", "decl", "vars_decl", "var_decl", "procedure_decl", 
                   "args_decl", "arg_decl", "body", "simple_body", "b_if", 
                   "b_for", "b_while", "assign", "call", "args_list", "args", 
                   "arg", "expression", "simple_expression", "term", "not_el", 
                   "el", "mb" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    MUL_OP=21
    ADD_OP=22
    REL_OP=23
    STD_TYPE_NAME=24
    INTEGER=25
    CHAR=26
    BOOL=27
    STRING=28
    ID=29
    DIGIT=30
    LETTER=31
    WS=32
    COMMENT_1=33
    COMMENT_2=34
    COMMENT_3=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    globalVars = {}  # ID : TYPE
    procedures = {}  # ID : LINE
    args = {}
    lastType = ''


    class RContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program(self):
            return self.getTypedRuleContext(PascalParser.ProgramContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_r

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR" ):
                listener.enterR(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR" ):
                listener.exitR(self)




    def r(self):

        localctx = PascalParser.RContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_r)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.program()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PascalParser.ID, 0)

        def mb(self):
            return self.getTypedRuleContext(PascalParser.MbContext,0)


        def decl(self):
            return self.getTypedRuleContext(PascalParser.DeclContext,0)


        def body(self):
            return self.getTypedRuleContext(PascalParser.BodyContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = PascalParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(PascalParser.T__0)
            self.state = 51
            self.match(PascalParser.ID)
            self.state = 52
            self.mb()
            self.state = 53
            self.decl()
            self.state = 54
            self.match(PascalParser.T__1)
            self.state = 55
            self.body()
            self.state = 56
            self.match(PascalParser.T__2)
            print(self.procedures)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(PascalParser.Var_declContext,0)


        def decl(self):
            return self.getTypedRuleContext(PascalParser.DeclContext,0)


        def procedure_decl(self):
            return self.getTypedRuleContext(PascalParser.Procedure_declContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)




    def decl(self):

        localctx = PascalParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 66
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PascalParser.T__1]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [PascalParser.T__3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.var_decl()
                self.state = 61
                self.decl()
                pass
            elif token in [PascalParser.T__5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 63
                self.procedure_decl()
                self.state = 64
                self.decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Vars_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(PascalParser.Var_declContext,0)


        def vars_decl(self):
            return self.getTypedRuleContext(PascalParser.Vars_declContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_vars_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars_decl" ):
                listener.enterVars_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars_decl" ):
                listener.exitVars_decl(self)




    def vars_decl(self):

        localctx = PascalParser.Vars_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vars_decl)
        try:
            self.state = 72
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PascalParser.T__1]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [PascalParser.T__3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.var_decl()
                self.state = 70
                self.vars_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token
            self._STD_TYPE_NAME = None # Token

        def ID(self):
            return self.getToken(PascalParser.ID, 0)

        def STD_TYPE_NAME(self):
            return self.getToken(PascalParser.STD_TYPE_NAME, 0)

        def mb(self):
            return self.getTypedRuleContext(PascalParser.MbContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl" ):
                listener.enterVar_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl" ):
                listener.exitVar_decl(self)




    def var_decl(self):

        localctx = PascalParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(PascalParser.T__3)
            self.state = 75
            localctx._ID = self.match(PascalParser.ID)
            self.state = 76
            self.match(PascalParser.T__4)
            self.state = 77
            localctx._STD_TYPE_NAME = self.match(PascalParser.STD_TYPE_NAME)
            self.state = 78
            self.mb()

            self.globalVars[(None if localctx._ID is None else localctx._ID.text)] = (None if localctx._STD_TYPE_NAME is None else localctx._STD_TYPE_NAME.text)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Procedure_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token

        def ID(self):
            return self.getToken(PascalParser.ID, 0)

        def args_decl(self):
            return self.getTypedRuleContext(PascalParser.Args_declContext,0)


        def mb(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.MbContext)
            else:
                return self.getTypedRuleContext(PascalParser.MbContext,i)


        def vars_decl(self):
            return self.getTypedRuleContext(PascalParser.Vars_declContext,0)


        def body(self):
            return self.getTypedRuleContext(PascalParser.BodyContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_procedure_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedure_decl" ):
                listener.enterProcedure_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedure_decl" ):
                listener.exitProcedure_decl(self)




    def procedure_decl(self):

        localctx = PascalParser.Procedure_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_procedure_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(PascalParser.T__5)
            self.state = 82
            localctx._ID = self.match(PascalParser.ID)
            self.state = 83
            self.match(PascalParser.T__6)
            self.state = 84
            self.args_decl()
            self.state = 85
            self.match(PascalParser.T__7)
            self.state = 86
            self.mb()
            self.state = 87
            self.vars_decl()
            self.state = 88
            self.match(PascalParser.T__1)
            self.state = 89
            self.body()
            self.state = 90
            self.match(PascalParser.T__8)
            self.state = 91
            self.mb()

            self.procedures[(None if localctx._ID is None else localctx._ID.text)] = (0 if localctx._ID is None else localctx._ID.line)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Args_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg_decl(self):
            return self.getTypedRuleContext(PascalParser.Arg_declContext,0)


        def args_decl(self):
            return self.getTypedRuleContext(PascalParser.Args_declContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_args_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs_decl" ):
                listener.enterArgs_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgs_decl" ):
                listener.exitArgs_decl(self)




    def args_decl(self):

        localctx = PascalParser.Args_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_args_decl)
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PascalParser.T__7]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [PascalParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.arg_decl()
                self.state = 96
                self.args_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Arg_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PascalParser.ID, 0)

        def STD_TYPE_NAME(self):
            return self.getToken(PascalParser.STD_TYPE_NAME, 0)

        def getRuleIndex(self):
            return PascalParser.RULE_arg_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg_decl" ):
                listener.enterArg_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg_decl" ):
                listener.exitArg_decl(self)




    def arg_decl(self):

        localctx = PascalParser.Arg_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arg_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(PascalParser.ID)
            self.state = 101
            self.match(PascalParser.T__4)
            self.state = 102
            self.match(PascalParser.STD_TYPE_NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(PascalParser.BodyContext,0)


        def mb(self):
            return self.getTypedRuleContext(PascalParser.MbContext,0)


        def simple_body(self):
            return self.getTypedRuleContext(PascalParser.Simple_bodyContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)




    def body(self):

        localctx = PascalParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_body)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PascalParser.T__2, PascalParser.T__8, PascalParser.T__11]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [PascalParser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(PascalParser.T__1)
                self.state = 106
                self.body()
                self.state = 107
                self.match(PascalParser.T__8)
                self.state = 108
                self.mb()
                pass
            elif token in [PascalParser.T__9, PascalParser.T__12, PascalParser.T__15, PascalParser.ID]:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.simple_body()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Simple_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(PascalParser.AssignContext,0)


        def body(self):
            return self.getTypedRuleContext(PascalParser.BodyContext,0)


        def b_for(self):
            return self.getTypedRuleContext(PascalParser.B_forContext,0)


        def b_while(self):
            return self.getTypedRuleContext(PascalParser.B_whileContext,0)


        def call(self):
            return self.getTypedRuleContext(PascalParser.CallContext,0)


        def b_if(self):
            return self.getTypedRuleContext(PascalParser.B_ifContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_simple_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_body" ):
                listener.enterSimple_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_body" ):
                listener.exitSimple_body(self)




    def simple_body(self):

        localctx = PascalParser.Simple_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_simple_body)
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.assign()
                self.state = 114
                self.body()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.b_for()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.b_while()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 118
                self.call()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 119
                self.b_if()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class B_ifContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(PascalParser.ExpressionContext,0)


        def body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.BodyContext)
            else:
                return self.getTypedRuleContext(PascalParser.BodyContext,i)


        def getRuleIndex(self):
            return PascalParser.RULE_b_if

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterB_if" ):
                listener.enterB_if(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitB_if" ):
                listener.exitB_if(self)




    def b_if(self):

        localctx = PascalParser.B_ifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_b_if)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(PascalParser.T__9)
            self.state = 123
            self.expression()
            self.state = 124
            self.match(PascalParser.T__10)
            self.state = 125
            self.body()
            self.state = 126
            self.match(PascalParser.T__11)
            self.state = 127
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class B_forContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(PascalParser.AssignContext,0)


        def expression(self):
            return self.getTypedRuleContext(PascalParser.ExpressionContext,0)


        def body(self):
            return self.getTypedRuleContext(PascalParser.BodyContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_b_for

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterB_for" ):
                listener.enterB_for(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitB_for" ):
                listener.exitB_for(self)




    def b_for(self):

        localctx = PascalParser.B_forContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_b_for)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(PascalParser.T__12)
            self.state = 130
            self.assign()
            self.state = 131
            self.match(PascalParser.T__13)
            self.state = 132
            self.expression()
            self.state = 133
            self.match(PascalParser.T__14)
            self.state = 134
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class B_whileContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(PascalParser.ExpressionContext,0)


        def body(self):
            return self.getTypedRuleContext(PascalParser.BodyContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_b_while

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterB_while" ):
                listener.enterB_while(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitB_while" ):
                listener.exitB_while(self)




    def b_while(self):

        localctx = PascalParser.B_whileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_b_while)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(PascalParser.T__15)
            self.state = 137
            self.expression()
            self.state = 138
            self.match(PascalParser.T__14)
            self.state = 139
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._ID = None # Token

        def ID(self):
            return self.getToken(PascalParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(PascalParser.ExpressionContext,0)


        def mb(self):
            return self.getTypedRuleContext(PascalParser.MbContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)




    def assign(self):

        localctx = PascalParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            localctx._ID = self.match(PascalParser.ID)
            self.state = 142
            self.match(PascalParser.T__16)
            self.state = 143
            self.expression()
            self.state = 144
            self.mb()

            if (self.globalVars[(None if localctx._ID is None else localctx._ID.text)] != self.lastType):
                sys.stderr.write('Строка №'+str((0 if localctx._ID is None else localctx._ID.line))+' Неверный тип '+(None if localctx._ID is None else localctx._ID.text)+'\n')

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CallContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PascalParser.ID, 0)

        def args_list(self):
            return self.getTypedRuleContext(PascalParser.Args_listContext,0)


        def mb(self):
            return self.getTypedRuleContext(PascalParser.MbContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCall" ):
                listener.enterCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCall" ):
                listener.exitCall(self)




    def call(self):

        localctx = PascalParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(PascalParser.ID)
            self.state = 148
            self.match(PascalParser.T__6)
            self.state = 149
            self.args_list()
            self.state = 150
            self.match(PascalParser.T__7)
            self.state = 151
            self.mb()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Args_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg(self):
            return self.getTypedRuleContext(PascalParser.ArgContext,0)


        def args(self):
            return self.getTypedRuleContext(PascalParser.ArgsContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_args_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs_list" ):
                listener.enterArgs_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgs_list" ):
                listener.exitArgs_list(self)




    def args_list(self):

        localctx = PascalParser.Args_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_args_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.arg()
            self.state = 154
            self.args()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg(self):
            return self.getTypedRuleContext(PascalParser.ArgContext,0)


        def args(self):
            return self.getTypedRuleContext(PascalParser.ArgsContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_args

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs" ):
                listener.enterArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgs" ):
                listener.exitArgs(self)




    def args(self):

        localctx = PascalParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_args)
        try:
            self.state = 161
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PascalParser.T__7]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [PascalParser.T__17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.match(PascalParser.T__17)
                self.state = 158
                self.arg()
                self.state = 159
                self.args()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(PascalParser.ExpressionContext,0)


        def getRuleIndex(self):
            return PascalParser.RULE_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg" ):
                listener.enterArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg" ):
                listener.exitArg(self)




    def arg(self):

        localctx = PascalParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_arg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PascalParser.Simple_expressionContext)
            else:
                return self.getTypedRuleContext(PascalParser.Simple_expressionContext,i)


        def REL_OP(self):
            return self.getToken(PascalParser.REL_OP, 0)

        def getRuleIndex(self):
            return PascalParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):
